Home and about view are updated. Unit testing reports are added

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,23 @@
-<p>This is the about view.</p>
+<div class="row">
+    <div class="col-lg-12 col-lg-offset-1">
+        <div class="row">
+            <div class="col-lg-2">
+                <img src="views\about\1.jpg" alt="Jahirul Islam" class="img-responsive img-circle" />
+            </div>
+            <div class="col-lg-6">
+                <blockquote>
+                    <p>Md. Jahirul Islam Bhuiyan</p>
+                    <address>
+                        <strong>Email</strong>
+                        <a href="mailto:#">0nline4help@gmail.com</a>
+                    </address>
+                    <footer>
+                        Working in
+                        <cite title="Southtech Limited">Southtech Limited</cite>
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+
+    </div>
+</div>
