--- a/app/views/about.html
+++ b/app/views/about.html
@@ -8,8 +8,9 @@
                 <blockquote>
                     <p>Md. Jahirul Islam Bhuiyan</p>
                     <address>
+                        <strong>Phone</strong> +8801914292121 <br />
                         <strong>Email</strong>
-                        <a href="mailto:#">0nline4help@gmail.com</a>
+                        <a href="mailto:#">{{emailAddress}}</a> <span class="glyphicon glyphicon-eye-open" data-ng-click="showEmail($event)"></span>
                     </address>
                     <footer>
                         Working in
