Product List added

--- a/app/views/products.html
+++ b/app/views/products.html
@@ -1,1 +1,11 @@
-<p>This is the products view.</p>
+<h2>All Products</h2>
+<ul class="products">
+    <li ng-repeat="product in products | filter:query | orderBy:orderProp" class="thumbnail product-listing">
+
+        <a ui-sref="products.detail({productId:product.id})" class="thumbnail">
+            <img ng-src="{{product.imageUrl}}" />
+        </a>
+        <a ui-sref="products.detail({productId:product.id})">{{product.name}}</a>
+        <p>{{product.snippet}}</p>
+    </li>
+</ul>
